--- a/index.html
+++ b/index.html
@@ -46,39 +46,39 @@
               </svg>
             </button>
           </div>
-
-          <div class="modal-menu" id="modal-menu">
-            <div class="menu">
-              <div class="menu-logo-container">
-                <a class="menu-logo-link" href="./index.html">Mobileapp</a>
-                <button
-                  type="button"
-                  class="close-btn"
-                  onclick="document.getElementById('modal-menu').classList.remove('is-open')"
-                >
-                  <svg class="close-icon" width="20" height="20">
-                    <use href="./images/icons.svg#close"></use>
-                  </svg>
-                </button>
-              </div>
-              <ul class="menu-list">
-                <li>
-                  <a href="./index.html" class="menu-link current">HOME</a>
-                </li>
-                <li>
-                  <a href="#features" class="menu-link">FEATURES</a>
-                </li>
-                <li><a href="#team" class="menu-link">TEAM</a></li>
-                <li>
-                  <a href="#testimonials" class="menu-link">TESTIMONIALS</a>
-                </li>
-                <li>
-                  <a href="#contact" class="menu-link">CONTACT</a>
-                </li>
-              </ul>
-            </div>
-          </div>
         </header>
+
+        <div class="modal-menu" id="modal-menu">
+          <div class="menu">
+            <div class="menu-logo-container">
+              <a class="menu-logo-link" href="./index.html">Mobileapp</a>
+              <button
+                type="button"
+                class="close-btn"
+                onclick="document.getElementById('modal-menu').classList.remove('is-open')"
+              >
+                <svg class="close-icon" width="20" height="20">
+                  <use href="./images/icons.svg#close"></use>
+                </svg>
+              </button>
+            </div>
+            <ul class="menu-list">
+              <li>
+                <a href="./index.html" class="menu-link current">HOME</a>
+              </li>
+              <li>
+                <a href="#features" class="menu-link">FEATURES</a>
+              </li>
+              <li><a href="#team" class="menu-link">TEAM</a></li>
+              <li>
+                <a href="#testimonials" class="menu-link">TESTIMONIALS</a>
+              </li>
+              <li>
+                <a href="#contact" class="menu-link">CONTACT</a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <section class="hero">
           <div class="container hero-container">
             <div class="hero-wrapper">
@@ -132,168 +132,168 @@
               />
             </picture>
           </div>
-
-          <div class="modal-overflay" id="modal-overflay">
-            <div class="overflay">
-              <button
-                type="button"
-                class="close-btn download"
-                onclick="document.getElementById('modal-overflay').classList.remove('is-open')"
-              >
-                <svg class="close-icon" width="20" height="20">
-                  <use href="./images/icons.svg#close"></use>
-                </svg>
-              </button>
-              <h2 class="overflay-title">Download</h2>
-              <form name="download-form" class="download-form">
-                <input
-                  class="visually-hidden download-input"
-                  type="radio"
-                  name="download"
-                  value="free"
-                  id="free-download"
-                  checked
-                />
-
-                <label class="download-label" for="free-download"
-                  ><span class="label-container">
-                    <svg class="file-icon" width="80" height="106">
-                      <use href="./images/icons.svg#file-load"></use>
-                    </svg>
-                    <span class="label-title">Download free plan</span>
-                    <span class="label-text">Basic functionality</span>
-                    <span class="label-text">Limited access</span>
-                    <span class="label-text">Community support</span>
-                  </span>
-                </label>
-
-                <input
-                  class="visually-hidden download-input"
-                  type="radio"
-                  name="download"
-                  id="download"
-                  value="subscription"
-                />
-
-                <label class="download-label" for="download">
-                  <span class="label-container">
-                    <svg class="file-icon" width="80" height="106">
-                      <use href="./images/icons.svg#file-load"></use>
-                    </svg>
-                    <span class="label-title">Download for 20$</span>
-                    <span class="label-text">Ad-free experience</span>
-                    <span class="label-text">Unlock exclusive features</span>
-
-                    <span class="label-text">
-                      Content for the ultimate mobile experience
-                    </span>
-                  </span>
-                </label>
-              </form>
-              <p class="download-text">
-                No matter which plan you choose, we're excited to have you as
-                part of our community of mobile app users!
-              </p>
-              <div class="info-list-container">
-                <ul class="info-list">
-                  <li class="info-list-item">
-                    <div class="info-icon-container">
-                      <svg width="20" height="26" class="info-icon">
-                        <use href="./images/icons.svg#file"></use>
-                      </svg>
-                    </div>
-                    <div class="info-text">
-                      <p class="info-title">App name</p>
-                      <p class="info-value">Mobileapp.layout</p>
-                    </div>
-                  </li>
-                  <li class="info-list-item">
-                    <div class="info-icon-container">
-                      <svg width="22" height="28" class="info-icon">
-                        <use href="./images/icons.svg#license"></use>
-                      </svg>
-                    </div>
-                    <div class="info-text">
-                      <p class="info-title">License</p>
-                      <p class="info-value">Free</p>
-                    </div>
-                  </li>
-                  <li class="info-list-item">
-                    <div class="info-icon-container">
-                      <svg width="26" height="26" class="info-icon">
-                        <use href="./images/icons.svg#user"></use>
-                      </svg>
-                    </div>
-                    <div class="info-text">
-                      <p class="info-title">Author</p>
-                      <p class="info-value">Mobile Marrket App.com</p>
-                    </div>
-                  </li>
-                  <li class="info-list-item">
-                    <div class="info-icon-container">
-                      <svg width="22" height="24" class="info-icon">
-                        <use href="./images/icons.svg#calendar"></use>
-                      </svg>
-                    </div>
-                    <div class="info-text">
-                      <p class="info-title">Data</p>
-                      <p class="info-value">21.02.2022</p>
-                    </div>
-                  </li>
-                  <li class="info-list-item line-span">
-                    <span class="line"></span>
-                  </li>
-                  <li class="info-list-item">
-                    <div class="info-icon-container">
-                      <svg width="26" height="24" class="info-icon">
-                        <use href="./images/icons.svg#desk"></use>
-                      </svg>
-                    </div>
-                    <div class="info-text">
-                      <p class="info-title">OC</p>
-                      <p class="info-value">Windows</p>
-                    </div>
-                  </li>
-                  <li class="info-list-item">
-                    <div class="info-icon-container">
-                      <svg width="24" height="24" class="info-icon">
-                        <use href="./images/icons.svg#globe"></use>
-                      </svg>
-                    </div>
-                    <div class="info-text">
-                      <p class="info-title">Language</p>
-                      <p class="info-value">English</p>
-                    </div>
-                  </li>
-                  <li class="info-list-item">
-                    <div class="info-icon-container">
-                      <svg width="22" height="22" class="info-icon">
-                        <use href="./images/icons.svg#size"></use>
-                      </svg>
-                    </div>
-                    <div class="info-text">
-                      <p class="info-title">Size</p>
-                      <p class="info-value">4.16 MB</p>
-                    </div>
-                  </li>
-                  <li class="info-list-item">
-                    <div class="info-icon-container">
-                      <svg width="28" height="28" class="info-icon">
-                        <use href="./images/icons.svg#load"></use>
-                      </svg>
-                    </div>
-                    <div class="info-text">
-                      <p class="info-title">Downloads</p>
-                      <p class="info-value">964</p>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-
-              <a class="download-link" href="#" download="">Download</a>
-            </div>
-          </div>
         </section>
+
+        <div class="modal-overflay" id="modal-overflay">
+          <div class="overflay">
+            <button
+              type="button"
+              class="close-btn download"
+              onclick="document.getElementById('modal-overflay').classList.remove('is-open')"
+            >
+              <svg class="close-icon" width="20" height="20">
+                <use href="./images/icons.svg#close"></use>
+              </svg>
+            </button>
+            <h2 class="overflay-title">Download</h2>
+            <form name="download-form" class="download-form">
+              <input
+                class="visually-hidden download-input"
+                type="radio"
+                name="download"
+                value="free"
+                id="free-download"
+                checked
+              />
+
+              <label class="download-label" for="free-download"
+                ><span class="label-container">
+                  <svg class="file-icon" width="80" height="106">
+                    <use href="./images/icons.svg#file-load"></use>
+                  </svg>
+                  <span class="label-title">Download free plan</span>
+                  <span class="label-text">Basic functionality</span>
+                  <span class="label-text">Limited access</span>
+                  <span class="label-text">Community support</span>
+                </span>
+              </label>
+
+              <input
+                class="visually-hidden download-input"
+                type="radio"
+                name="download"
+                id="download"
+                value="subscription"
+              />
+
+              <label class="download-label" for="download">
+                <span class="label-container">
+                  <svg class="file-icon" width="80" height="106">
+                    <use href="./images/icons.svg#file-load"></use>
+                  </svg>
+                  <span class="label-title">Download for 20$</span>
+                  <span class="label-text">Ad-free experience</span>
+                  <span class="label-text">Unlock exclusive features</span>
+
+                  <span class="label-text">
+                    Content for the ultimate mobile experience
+                  </span>
+                </span>
+              </label>
+            </form>
+            <p class="download-text">
+              No matter which plan you choose, we're excited to have you as part
+              of our community of mobile app users!
+            </p>
+            <div class="info-list-container">
+              <ul class="info-list">
+                <li class="info-list-item">
+                  <div class="info-icon-container">
+                    <svg width="20" height="26" class="info-icon">
+                      <use href="./images/icons.svg#file"></use>
+                    </svg>
+                  </div>
+                  <div class="info-text">
+                    <p class="info-title">App name</p>
+                    <p class="info-value">Mobileapp.layout</p>
+                  </div>
+                </li>
+                <li class="info-list-item">
+                  <div class="info-icon-container">
+                    <svg width="22" height="28" class="info-icon">
+                      <use href="./images/icons.svg#license"></use>
+                    </svg>
+                  </div>
+                  <div class="info-text">
+                    <p class="info-title">License</p>
+                    <p class="info-value">Free</p>
+                  </div>
+                </li>
+                <li class="info-list-item">
+                  <div class="info-icon-container">
+                    <svg width="26" height="26" class="info-icon">
+                      <use href="./images/icons.svg#user"></use>
+                    </svg>
+                  </div>
+                  <div class="info-text">
+                    <p class="info-title">Author</p>
+                    <p class="info-value">Mobile Marrket App.com</p>
+                  </div>
+                </li>
+                <li class="info-list-item">
+                  <div class="info-icon-container">
+                    <svg width="22" height="24" class="info-icon">
+                      <use href="./images/icons.svg#calendar"></use>
+                    </svg>
+                  </div>
+                  <div class="info-text">
+                    <p class="info-title">Data</p>
+                    <p class="info-value">21.02.2022</p>
+                  </div>
+                </li>
+              </ul>
+
+              <ul class="info-list current">
+                <li class="info-list-item">
+                  <div class="info-icon-container">
+                    <svg width="26" height="24" class="info-icon">
+                      <use href="./images/icons.svg#desk"></use>
+                    </svg>
+                  </div>
+                  <div class="info-text">
+                    <p class="info-title">OC</p>
+                    <p class="info-value">Windows</p>
+                  </div>
+                </li>
+                <li class="info-list-item">
+                  <div class="info-icon-container">
+                    <svg width="24" height="24" class="info-icon">
+                      <use href="./images/icons.svg#globe"></use>
+                    </svg>
+                  </div>
+                  <div class="info-text">
+                    <p class="info-title">Language</p>
+                    <p class="info-value">English</p>
+                  </div>
+                </li>
+                <li class="info-list-item">
+                  <div class="info-icon-container">
+                    <svg width="22" height="22" class="info-icon">
+                      <use href="./images/icons.svg#size"></use>
+                    </svg>
+                  </div>
+                  <div class="info-text">
+                    <p class="info-title">Size</p>
+                    <p class="info-value">4.16 MB</p>
+                  </div>
+                </li>
+                <li class="info-list-item">
+                  <div class="info-icon-container">
+                    <svg width="28" height="28" class="info-icon">
+                      <use href="./images/icons.svg#load"></use>
+                    </svg>
+                  </div>
+                  <div class="info-text">
+                    <p class="info-title">Downloads</p>
+                    <p class="info-value">964</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+
+            <a class="download-link" href="#" download="">Download</a>
+          </div>
+        </div>
       </div>
 
       <section class="features" id="features">
@@ -395,7 +395,11 @@
                 </li>
               </ul>
             </div>
-            <button type="button" class="video-btn">
+            <button
+              type="button"
+              class="video-btn"
+              onclick="document.getElementById('modal-video').classList.add('is-open')"
+            >
               <picture>
                 <source
                   srcset="
@@ -429,6 +433,30 @@
           </div>
         </div>
       </section>
+
+      <div class="modal-video" id="modal-video">
+        <div class="video-player">
+          <button
+            type="button"
+            class="close-btn player"
+            onclick="document.getElementById('modal-video').classList.remove('is-open')"
+          >
+            <svg class="close-icon" width="20" height="20">
+              <use href="./images/icons.svg#close"></use>
+            </svg>
+          </button>
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/J4xNhYeaGkI?si=4M-0PbrVZpPO5ovq"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
 
       <section class="team" id="team">
         <div class="container">
