--- a/index.html
+++ b/index.html
@@ -666,6 +666,7 @@
                   class="contact-input"
                   placeholder="Name"
                   name="user-name"
+                  pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐʼ]+"
                   required
                 />
                 <input
@@ -673,6 +674,7 @@
                   class="contact-input"
                   placeholder="Email"
                   name="user-email"
+                  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
                   required
                 />
                 <textarea
